add new function

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
     	    <div id="global-navbar" class="collapse navbar-collapse" ng-if="isLogin">
     	    	<ul class="nav navbar-nav">
                     <li ng-repeat="item in navBarItems"><a ng-href="{{'#/'+$index}}">{{item}}</a></li>
+                    <li><a href="../sport_phone/index.html">手机版任务管理</a></li>
     			</ul>
                 <div class="navbar-text logOFF">
                     <div class="navbar-inner">
