--- a/public/html/task-list.html
+++ b/public/html/task-list.html
@@ -5,6 +5,11 @@
             <input type="text" class="searchBox form-control" placeholder="搜索昵称" ng-model="searchData.data" ng-change="searchChange()"/>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-12 btn-row" ng-if="checked" align="right">
+            <button type="button" class="btn btn-primary" ng-click="dealAll()">批提交</button>
+        </div>
+    </div>
     <div class="">
         <ul role="tablist" class="nav nav-tabs" id="taskTab">
             <li ng-class="{true: 'active', false: 'inactive'}[checked]" role="presentation"><a aria-expanded="true" aria-controls="onchecktask" data-toggle="tab" role="tab" id="onchecktask-tab"  href="#3">待审批</a></li>
@@ -23,7 +28,7 @@
                 <th st-sort="end_time">end_time</th>
                 <th st-sort="distance">distance</th>
                 <th st-sort="reason">reason</th>
-                <th>action</th>
+                <th ng-if="!checked">action</th>
             </tr>
 
             </thead>
@@ -45,11 +50,28 @@
                 <td class="col-md-1">{{row.begin_time|timeconvert}}</td>
                 <td class="col-md-1">{{row.end_time|timeconvert}}</td>
                 <td class="col-md-1">{{row.distance}} m</td>
-
-                <td class="col-md-1">
-                    <textarea rows="4" name="S1" cols="20" ng-model="row.reason"></textarea>
+                <td class="col-md-2" ng-if="checked">
+                    <div>
+                    <label class="checkbox-inline">
+                        <input type="radio" ng-click="cancelSelect($index)" name="{{$index}}" checked>未审批
+                    </label>
+                    <label class="checkbox-inline">
+                        <input type="radio" ng-click="approveSelect($index)" name="{{$index}}">批准
+                    </label>
+                    <label class="checkbox-inline">
+                        <input type="radio" ng-click="rejectSelect($index)" name="{{$index}}">拒绝
+                    </label>
+                    </div>
+                    <br>
+                    <div>
+                    <textarea rows="1" name="S1" cols="40" ng-model="row.reason" style="resize: none"></textarea>
+                    </div>
                 </td>
-                <td class="col-md-1">
+
+                <td class="col-md-1" ng-if="!checked">
+                    <textarea rows="4" name="S1" cols="20" ng-model="row.reason" style="resize: none"></textarea>
+                </td>
+                <td class="col-md-1" ng-if="!checked">
                     <button type="button" class="btn btn-primary" ng-click="Approve(row)" ng-disabled="row.reason.length==0">批准</button>
 
                     <button type="button" class="btn btn-primary" ng-click="Reject(row)" ng-disabled="row.reason.length==0">拒绝</button>
@@ -57,6 +79,11 @@
             </tr>
             </tbody>
         </table>
+        <div class="row">
+            <div class="col-md-12 btn-row" ng-if="checked" align="right">
+                <button type="button" class="btn btn-primary" ng-click="dealAll()">批提交</button>
+            </div>
+        </div>
         <div gen-pagination="pagination"></div>
     </div>
 
