--- a/public/sport_phone/html/user-login.html
+++ b/public/sport_phone/html/user-login.html
@@ -1,4 +1,4 @@
-<div ng-controller="loginController">
+<div ng-controller="loginController" class="login-panel">
     <br>
     <md-content layout-padding class="autoScroll">
 
