--- a/public/sport_phone/index.html
+++ b/public/sport_phone/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="zh-CN" ng-app="app">
 <head>
-    <meta name="viewport" content="initial-scale=1" charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="cleartype" content="on">
     <link rel="stylesheet" href="css/angular-material.min.css">
     <link rel="stylesheet" href="css/app.css">
     <title>悦动力</title>
