--- a/public/html/dashboard-info.html
+++ b/public/html/dashboard-info.html
@@ -91,7 +91,7 @@
                                 <td>{{user.nickname}}</td>
                                 <td>{{user.gender|gender}}</td>
                                 <td>{{user.birthday|age}}</td>
-                                <td>{{user.onlinetime}}</td>
+                                <td>{{user.onlinetime|timechange}}</td>
                             </tr>
 
                             </tbody>
@@ -172,7 +172,7 @@
                                 <td>{{user.nickname}}</td>
                                 <td>{{user.gender|gender}}</td>
                                 <td>{{user.birthday|age}}</td>
-                                <td>{{user.game}}</td>
+                                <td>{{user.game|timechange}}</td>
                             </tr>
                             </tbody>
                         </table>
