--- a/public/sport_phone/index.html
+++ b/public/sport_phone/index.html
@@ -20,7 +20,7 @@
         </h1>
         <span flex></span>
 
-        <md-menu ng-if="isLogin">
+        <md-menu ng-if="isLogin" ng-show="isTasklist">
             <md-button aria-label="Open demo menu" class="md-icon-button" ng-click="$mdOpenMenu()">
                 <md-icon md-svg-icon="images/more_vert.svg"></md-icon>
             </md-button>
