add new function

--- a/public/html/article-import.html
+++ b/public/html/article-import.html
@@ -9,28 +9,10 @@
             <br>
         <div class="ueditor"  config="config" ng-model="content"></div>
         <br>
-        <div ng-if="0">
-            昵&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;称:   <input type="text" size=100 ng-model="nickname" ng-init="test"><p style="color: #ff0000" ng-if="errorShow">( *存在图片资源，昵称不能为空)</p>
-        </div>
-        <br>
-        <div>
-            推荐文章:   <input type="text" size=100 ng-model="artilceid" ng-init="">
+        <div align="right" >
+            <button type="button" class="btn btn-primary" ng-click="importarticle()" ng-disabled="content.length==0 && title.length==0">提交</button>
         </div>
 
-        <br>
-        <div align="right" >
-            <button type="button" class="btn btn-primary" ng-click="importarticle()" ng-disabled="content.length==0 && title.length==0 && fileUrl.length==0 && artilceid.length==0">提交</button>
-        </div>
-        <br>
-        <div>
-            请选择图片: <input type="file"  name="fileToUpload" id="fileToUpload" />
-            <p style="color: #ff0000" ng-if="updateError">( *上传失败，请重新上传)</p>
-        </div>
-        <br>
-        <div align="right" >
-            <button type="button" class="btn btn-primary" ng-click="uploadFile()">上传</button>
-        </div>
-        <img ng-src="{{fileUrl}}" class="img-small" ng-if="fileUrl.length>0">
     </form>
 
 </div>
